--- a/index.html
+++ b/index.html
@@ -1437,7 +1437,7 @@
           </div>
           <div>
             <div>تماس اضطراری</div>
-            <div dir="ltr">041-33556677</div>
+            <div dir="ltr">041-36685937</div>
           </div>
         </div>
         <button class="hamburger">
@@ -1453,7 +1453,7 @@
       <div class="hero-content fade-in">
         <div class="hero-subtitle">
           <i class="fas fa-stethoscope"></i>
-          متخصص دندانپزشکی زیبایی
+          متخصص بیماری های دهان، فک و صورت
         </div>
         <h1 class="hero-title">
           دکتر <span>رضا توکلی عطاآبادی</span>
@@ -1500,7 +1500,7 @@
             </div>
             <div class="badge-text">
 دکتر توکلی
-              <small>متخصص دندانپزشکی</small>
+              <small>جراح-دندانپزشک</small>
             </div>
           </div>
         </div>
@@ -1655,7 +1655,7 @@
             </div>
             <div class="doctor-info">
               <h3 class="doctor-name">دکتر رضا توکلی عطاآبادی</h3>
-              <div class="doctor-specialty">متخصص دندانپزشکی زیبایی و ایمپلنت</div>
+              <div class="doctor-specialty">متخصص بیماری‌های دهان، فک و صورت زیبایی و ایمپلنت</div>
               <p class="doctor-description">
                 با ۱۵ سال سابقه در زمینه دندانپزشکی زیبایی، ایمپلنت و ارتودنسی. عضو انجمن دندانپزشکان ایران و دارنده بورد تخصصی.
               </p>
@@ -1862,7 +1862,7 @@
               </div>
               <div class="contact-text">
                 <strong>آدرس مطب:</strong>
-                تبریز، باغمیشه، خیابان اصلی، پلاک ۱۲۳
+                تبریز، شهرک باغمیشه، مجتمع پزشکی باغمیشه، طبقه دوم
               </div>
             </li>
             <li>
@@ -1871,17 +1871,10 @@
               </div>
               <div class="contact-text">
                 <strong>شماره تماس:</strong>
-                ۰۴۱-۳۳۵۵۶۶۷۷
+                ۰۴۱-۳۶۶۸۵۹۳۷
               </div>
             </li>
             <li>
-              <div class="contact-icon">
-                <i class="fas fa-envelope"></i>
-              </div>
-              <div class="contact-text">
-                <strong>ایمیل:</strong>
-                dr.reza.tavakkoli@gmail.com
-              </div>
             </li>
             <li>
               <div class="contact-icon">
