--- a/index.html
+++ b/index.html
@@ -1591,7 +1591,7 @@
       </div>
 
       <div class="about-content fade-in">
-        <div class="section-subtitle">درباره من</div>
+        <div class="section-subtitle">درباره </div>
         <h2 class="section-title">دکتر رضا توکلی عطاآبادی</h2>
         <p class="hero-description">
           دکتر رضا توکلی عطاآبادی، فارغ‌التحصیل دندانپزشکی از دانشگاه علوم پزشکی تهران با رتبه برتر، دارای بورد تخصصی دندانپزشکی زیبایی و عضو انجمن دندانپزشکان ایران می‌باشد.
