--- a/index.html
+++ b/index.html
@@ -1424,7 +1424,7 @@
       <nav class="nav-menu">
         <li><a href="#home" class="nav-link active">خانه</a></li>
         <li><a href="#services" class="nav-link">خدمات</a></li>
-        <li><a href="#about" class="nav-link">درباره من</a></li>
+        <li><a href="#about" class="nav-link">درباره </a></li>
         <li><a href="#doctors" class="nav-link">تیم پزشکی</a></li>
         <li><a href="#blog" class="nav-link">مقالات</a></li>
         <li><a href="#contact" class="nav-link">تماس با ما</a></li>
