--- a/index.html
+++ b/index.html
@@ -1714,7 +1714,7 @@
     <div class="container">
       <h2 class="cta-title">برای رزرو نوبت همین حالا اقدام کنید</h2>
       <p class="cta-description">
-        مطب ما از شنبه تا پنجشنبه از ساعت ۸ صبح تا ۱۰ شب آماده ارائه خدمات دندانپزشکی با بهترین کیفیت به شما عزیزان می‌باشد. برای رزرو نوبت تماس بگیرید.
+        مطب دکتر توکلی از شنبه تا پنجشنبه از ساعت ۸ صبح تا ۶ عصر آماده ارائه خدمات دندانپزشکی با بهترین کیفیت به شما عزیزان می‌باشد. برای رزرو نوبت تماس بگیرید.
       </p>
       <div class="hero-cta">
         <a href="tel:+984133556677" class="btn cta-btn">
@@ -1835,7 +1835,7 @@
           <h3 class="footer-title">لینک‌های سریع</h3>
           <ul class="footer-links">
             <li><a href="#home" class="footer-link"><i class="fas fa-chevron-left"></i> صفحه اصلی</a></li>
-            <li><a href="#services" class="footer-link"><i class="fas fa-chevron-left"></i> خدمات ما</a></li>
+            <li><a href="#services" class="footer-link"><i class="fas fa-chevron-left"></i> خدمات </a></li>
             <li><a href="#about" class="footer-link"><i class="fas fa-chevron-left"></i> درباره دکتر</a></li>
             <li><a href="#doctors" class="footer-link"><i class="fas fa-chevron-left"></i> تیم پزشکی</a></li>
             <li><a href="#blog" class="footer-link"><i class="fas fa-chevron-left"></i> مقالات</a></li>
