--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   <style>
     /* ====== CSS Variables ====== */
     :root {
-      --primary: #4f46e5;
+      --primary: #846aff;
       --primary-dark: #4338ca;
-      --primary-light: #818cf8;
+      --primary-light: #846aff;
       --secondary: #10b981;
       --accent: #f59e0b;
       --dark: #1f2937;
