--- a/index.html
+++ b/index.html
@@ -1459,7 +1459,7 @@
           دکتر <span>رضا توکلی عطاآبادی</span>
         </h1>
         <p class="hero-description">
-          با بیش از ۱۵ سال تجربه در زمینه دندانپزشکی زیبایی، ایمپلنت و ارتودنسی. ما در مطب مجهز خود در تبریز، باغمیشه با استفاده از پیشرفته‌ترین تکنولوژی‌ها، زیباترین لبخندها را برای شما خلق می‌کنیم.
+          با بیش از ۲۱ سال تجربه در زمینه دندانپزشکی زیبایی، ایمپلنت و ارتودنسی. ما در مطب مجهز خود در تبریز، با استفاده از پیشرفته‌ترین تکنولوژی‌ها، زیباترین لبخندها را برای شما خلق می‌کنیم.
         </p>
         
         <div class="hero-cta">
@@ -1585,7 +1585,7 @@
         <img src="https://images.unsplash.com/photo-1551601651-2a8555f1a136?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1074&q=80" 
              alt="مطب دندانپزشکی" class="about-img">
         <div class="experience-badge">
-          <div class="experience-years">۱۵</div>
+          <div class="experience-years">۲۱</div>
           <div class="experience-text">سال تجربه موفق</div>
         </div>
       </div>
@@ -1626,8 +1626,8 @@
               <i class="fas fa-map-marker-alt"></i>
             </div>
             <div class="feature-text">
-              محل مطب
-              <small>تبریز، باغمیشه، خیابان اصلی، پلاک ۱۲۳</small>
+              آدرس کلینیک
+              <small>تبریز، شهرک باغمیشه، مجتمع پزشکی باغمیشه، طبقه دوم</small>
             </div>
           </div>
         </div>
