--- a/index.html
+++ b/index.html
@@ -1475,7 +1475,7 @@
 
         <div class="hero-stats">
           <div class="stat-item">
-            <div class="stat-number">۱۵+</div>
+            <div class="stat-number">۲۰+</div>
             <div class="stat-label">سال تجربه</div>
           </div>
           <div class="stat-item">
@@ -1511,7 +1511,6 @@
   <!-- Services -->
   <section id="services" class="services">
     <div class="container">
-      <div class="section-subtitle text-center">خدمات ما</div>
       <h2 class="section-title">خدمات دندانپزشکی تخصصی</h2>
       
       <div class="services-grid">
@@ -1657,7 +1656,7 @@
               <h3 class="doctor-name">دکتر رضا توکلی عطاآبادی</h3>
               <div class="doctor-specialty">متخصص بیماری‌های دهان، فک و صورت زیبایی و ایمپلنت</div>
               <p class="doctor-description">
-                با ۱۵ سال سابقه در زمینه دندانپزشکی زیبایی، ایمپلنت و ارتودنسی. عضو انجمن دندانپزشکان ایران و دارنده بورد تخصصی.
+                با +۲۱ سال سابقه در زمینه دندانپزشکی زیبایی، ایمپلنت و ارتودنسی. عضو انجمن دندانپزشکان ایران و دارنده بورد تخصصی.
               </p>
               <div class="doctor-social">
                 <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
