--- a/index.html
+++ b/index.html
@@ -1436,7 +1436,7 @@
             <i class="fas fa-phone"></i>
           </div>
           <div>
-            <div>تماس اضطراری</div>
+            <div>رزرو تلفنی نوبت</div>
             <div dir="ltr">041-36685937</div>
           </div>
         </div>
