--- a/index.html
+++ b/index.html
@@ -1581,7 +1581,7 @@
   <section id="about" class="about">
     <div class="container about-container">
       <div class="about-image fade-in">
-        <img src="https://images.unsplash.com/photo-1551601651-2a8555f1a136?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1074&q=80" 
+        <img src="https://raw.githubusercontent.com/muctebanesiri/tvkl/refs/heads/main/assets/about.png" 
              alt="مطب دندانپزشکی" class="about-img">
         <div class="experience-badge">
           <div class="experience-years">۲۱</div>
@@ -1649,12 +1649,12 @@
         <div class="doctors-grid">
           <div class="doctor-card fade-in">
             <div class="doctor-image-wrapper">
-              <img src="https://images.unsplash.com/photo-1612349317150-e413f6a5b16d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" 
+              <img src="https://raw.githubusercontent.com/muctebanesiri/tvkl/refs/heads/main/assets/dr.png" 
                    alt="دکتر رضا توکلی" class="doctor-img">
             </div>
             <div class="doctor-info">
               <h3 class="doctor-name">دکتر رضا توکلی عطاآبادی</h3>
-              <div class="doctor-specialty">متخصص بیماری‌های دهان، فک و صورت زیبایی و ایمپلنت</div>
+              <div class="doctor-specialty">متخصص بیماری‌های دهان، فک و صورت </div>
               <p class="doctor-description">
                 با +۲۱ سال سابقه در زمینه دندانپزشکی زیبایی، ایمپلنت و ارتودنسی. عضو انجمن دندانپزشکان ایران و دارنده بورد تخصصی.
               </p>
