--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>دکتر رضا توکلی عطاآبادی | بهترین دندانپزشک تبریز - باغمیشه</title>
+  <title>دکتر رضا توکلی عطاآبادی</title>
   <meta name="description" content="مطب تخصصی دندانپزشکی دکتر رضا توکلی عطاآبادی در تبریز، ارائه بهترین خدمات دندانپزشکی زیبایی، ایمپلنت، ارتودنسی و درمان ریشه">
   <meta name="keywords" content="دکتر رضا توکلی, دندانپزشک تبریز, باغمیشه, دندانپزشکی زیبایی, ایمپلنت, ارتودنسی">
   <meta name="author" content="دکتر رضا توکلی عطاآبادی">
@@ -1459,7 +1459,7 @@
           دکتر <span>رضا توکلی عطاآبادی</span>
         </h1>
         <p class="hero-description">
-          با بیش از ۲۱ سال تجربه در زمینه دندانپزشکی زیبایی، ایمپلنت و ارتودنسی. ما در مطب مجهز خود در تبریز، با استفاده از پیشرفته‌ترین تکنولوژی‌ها، زیباترین لبخندها را برای شما خلق می‌کنیم.
+          با بیش از ۲۰ سال تجربه درمان  بیماری های دهان، فک و صورت و دندانپزشکی زیبایی، ایمپلنت و ارتودنسی. ما در مطب مجهز خود در تبریز، با استفاده از پیشرفته‌ترین تکنولوژی‌ها، زیباترین لبخندها را برای شما خلق می‌کنیم.
         </p>
         
         <div class="hero-cta">
@@ -1584,7 +1584,7 @@
         <img src="https://raw.githubusercontent.com/muctebanesiri/tvkl/refs/heads/main/assets/about.png" 
              alt="مطب دندانپزشکی" class="about-img">
         <div class="experience-badge">
-          <div class="experience-years">۲۱</div>
+          <div class="experience-years">+۲۰</div>
           <div class="experience-text">سال تجربه موفق</div>
         </div>
       </div>
@@ -1593,7 +1593,7 @@
         <div class="section-subtitle">درباره </div>
         <h2 class="section-title">دکتر رضا توکلی عطاآبادی</h2>
         <p class="hero-description">
-          دکتر رضا توکلی عطاآبادی، فارغ‌التحصیل دندانپزشکی از دانشگاه علوم پزشکی تهران با رتبه برتر، دارای بورد تخصصی دندانپزشکی زیبایی و عضو انجمن دندانپزشکان ایران می‌باشد.
+          دکتر رضا توکلی عطاآبادی، فارغ‌التحصیل دندانپزشکی از دانشگاه علوم پزشکی تبریز با رتبه برتر، دارای بورد تخصصی بیماری‌های دهان، فک و صورت می‌باشد.
         </p>
         <p class="hero-description">
           ایشان با شرکت در بیش از ۵۰ دوره تخصصی داخلی و بین‌المللی، همواره دانش خود را به روز نگه داشته و با بهره‌گیری از جدیدترین تجهیزات دندانپزشکی، خدمات باکیفیتی را ارائه می‌دهند.
@@ -1606,7 +1606,7 @@
             </div>
             <div class="feature-text">
               مدارک تحصیلی
-              <small>دکترای دندانپزشکی از دانشگاه تهران</small>
+              <small>دکترای دندانپزشکی از دانشگاه تبریز</small>
             </div>
           </div>
 
