--- a/index.html
+++ b/index.html
@@ -1584,7 +1584,7 @@
         <img src="https://raw.githubusercontent.com/muctebanesiri/tvkl/refs/heads/main/assets/about.png" 
              alt="مطب دندانپزشکی" class="about-img">
         <div class="experience-badge">
-          <div class="experience-years">+۲۰</div>
+          <div class="experience-years">۲۰+</div>
           <div class="experience-text">سال تجربه موفق</div>
         </div>
       </div>
