--- a/index.html
+++ b/index.html
@@ -2561,7 +2561,7 @@
 
           <div class="doctor-card fade-in touch-feedback" data-aos="fade-up" data-aos-delay="250">
             <div class="doctor-image-wrapper">
-              <img src="https://images.unsplash.com/photo-1559839734-2b71ea197ec2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" 
+              <img src="" 
                    alt="دکتر مریم حسینی" class="doctor-img">
               <div class="doctor-overlay">
                 <div class="btn">مشاهده پروفایل</div>
@@ -2583,7 +2583,7 @@
 
           <div class="doctor-card fade-in touch-feedback" data-aos="fade-up" data-aos-delay="300">
             <div class="doctor-image-wrapper">
-              <img src="https://images.unsplash.com/photo-1612349317150-e413f6a5b16d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" 
+              <img src="" 
                    alt="دکتر محسن محمدی" class="doctor-img">
               <div class="doctor-overlay">
                 <div class="btn">مشاهده پروفایل</div>
