--- a/index.html
+++ b/index.html
@@ -2516,14 +2516,14 @@
             </div>
             <div class="feature-text">
               آدرس کلینیک
-              <small>تبریز، شهرک باغمیشه، مجتمع پزشکی باغمیشه، طبقه دوم</small>
+              <small>تبریز، شهرک باغمیشه، ابتدای خیابان امیرکبیر، روبروی ایتگاه آتشنشانی، مجتمع پزشکی باغمیشه، طبقه دوم</small>
             </div>
           </div>
         </div>
 
         <button class="btn open-map-btn touch-feedback">
           <i class="fas fa-map-marker-alt"></i>
-          مشاهده آدرس مطب
+          مسیریابی آدرس مطب
         </button>
       </div>
     </div>
@@ -2760,7 +2760,7 @@
               </div>
               <div class="contact-text">
                 <strong>آدرس مطب:</strong>
-                تبریز، شهرک باغمیشه، مجتمع پزشکی باغمیشه، طبقه دوم
+تبریز، شهرک باغمیشه، ابتدای خیابان امیرکبیر، روبروی ایتگاه آتشنشانی، مجتمع پزشکی باغمیشه، طبقه دوم
               </div>
             </li>
             <li>
@@ -2842,7 +2842,7 @@
   </a>
 
   <!-- WhatsApp Button -->
-  <a href="https://wa.me/989390247578" target="_blank" class="whatsapp-btn">
+  <a href="https://wa.me/989391279472" target="_blank" class="whatsapp-btn">
     <i class="fab fa-whatsapp"></i>
   </a>
 
@@ -3093,7 +3093,7 @@
       const encodedMessage = encodeURIComponent(message);
       
       // WhatsApp number (international format)
-      const whatsappNumber = '989390247578';
+      const whatsappNumber = '989391279472';
       
       // Create WhatsApp URL
       const whatsappUrl = `https://wa.me/${whatsappNumber}?text=${encodedMessage}`;
