--- a/index.html
+++ b/index.html
@@ -2311,13 +2311,13 @@
   <section id="home" class="hero">
     <div class="container hero-container">
       <div class="hero-content fade-in" data-aos="fade-right" data-aos-delay="200">
-        <div class="hero-subtitle">
-          <i class="fas fa-stethoscope"></i>
-          متخصص بیماری های دهان، فک و صورت
-        </div>
         <h1 class="hero-title">
           دکتر <span>رضا توکلی </span>
         </h1>
+                <div class="hero-subtitle">
+          <i class="fas fa-stethoscope"></i>
+          متخصص بیماری های دهان، فک و صورت
+        </div>
         <p class="hero-description">
           با بیش از ۲۰ سال تجربه درمان بیماری های دهان، فک و صورت و دندانپزشکی زیبایی، ایمپلنت و ارتودنسی. ما در مطب مجهز خود در تبریز، با استفاده از پیشرفته‌ترین تکنولوژی‌ها، زیباترین لبخندها را برای شما خلق می‌کنیم.
         </p>
@@ -2483,7 +2483,7 @@
         <div class="section-subtitle">درباره ما</div>
         <h2 class="section-title">دکتر رضا توکلی </h2>
         <p class="hero-description">
-          دکتر رضا توکلی ، فارغ‌التحصیل دندانپزشکی از دانشگاه علوم پزشکی تبریز با رتبه برتر، دارای بورد تخصصی بیماری‌های دهان، فک و صورت می‌باشد.
+          دکتر رضا توکلی ، فارغ‌التحصیل دندانپزشکی از دانشگاه علوم پزشکی تبریز، دارای بورد تخصصی بیماری‌های دهان، فک و صورت می‌باشد.
         </p>
         <p class="hero-description">
           ایشان با شرکت در بیش از ۵۰ دوره تخصصی داخلی و بین‌المللی، همواره دانش خود را به روز نگه داشته و با بهره‌گیری از جدیدترین تجهیزات دندانپزشکی، خدمات باکیفیتی را ارائه می‌دهند.
@@ -2506,7 +2506,7 @@
             </div>
             <div class="feature-text">
               گواهینامه‌ها
-              <small>بورد تخصصی دندانپزشکی زیبایی و ایمپلنت</small>
+              <small>بورد تخصصی دندانپزشکی عمومی و تخصصی از دانشگاه علوم پزشکی تبریز</small>
             </div>
           </div>
 
@@ -2549,7 +2549,7 @@
               <h3 class="doctor-name">دکتر رضا توکلی </h3>
               <div class="doctor-specialty">متخصص بیماری‌های دهان، فک و صورت</div>
               <p class="doctor-description">
-                با +۲۱ سال سابقه در زمینه دندانپزشکی زیبایی، ایمپلنت و ارتودنسی. عضو انجمن دندانپزشکان ایران و دارنده بورد تخصصی.
+                با +۲۱ سال سابقه در زمینه دندانپزشکی زیبایی، ایمپلنت و لیزر. عضو انجمن دندانپزشکان ایران و دارنده بورد تخصصی بیماری های دهان، فک و صورت.
               </p>
               <div class="doctor-social">
                 <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
