--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>مطب تخصصی دندانپزشکی دکتر رضا توکلی </title>
-  <meta name="description" content="مطب تخصصی دندانپزشکی دکتر رضا توکلی  در تبریز، ارائه بهترین خدمات دندانپزشکی زیبایی، ایمپلنت، ارتودنسی و درمان ریشه">
-  <meta name="keywords" content="دکتر رضا توکلی , دندانپزشک تبریز, باغمیشه, دندانپزشکی زیبایی, ایمپلنت, ارتودنسی">
+  <meta name="description" content="مطب تخصصی دندانپزشکی دکتر رضا توکلی  در تبریز، ارائه بهترین خدمات دندانپزشکی زیبایی، ایمپلنت، لیزر و درمان ریشه">
+  <meta name="keywords" content="دکتر رضا توکلی , دندانپزشک تبریز, باغمیشه, دندانپزشکی زیبایی, ایمپلنت, لیزر">
   <meta name="author" content="دکتر رضا توکلی ">
 
   <!-- Favicon -->
@@ -2319,7 +2319,7 @@
           متخصص بیماری های دهان، فک و صورت
         </div>
         <p class="hero-description">
-          با بیش از ۲۰ سال تجربه درمان بیماری های دهان، فک و صورت و دندانپزشکی زیبایی، ایمپلنت و ارتودنسی. ما در مطب مجهز خود در تبریز، با استفاده از پیشرفته‌ترین تکنولوژی‌ها، زیباترین لبخندها را برای شما خلق می‌کنیم.
+          با بیش از ۲۰ سال تجربه درمان بیماری های دهان، فک و صورت و دندانپزشکی زیبایی، ایمپلنت و لیزر. ما در مطب مجهز خود در تبریز، با استفاده از پیشرفته‌ترین تکنولوژی‌ها، زیباترین لبخندها را برای شما خلق می‌کنیم.
         </p>
         
         <div class="hero-cta">
@@ -2393,14 +2393,14 @@
           <div class="service-icon">
             <i class="fas fa-teeth"></i>
           </div>
-          <h3 class="service-title">ارتودنسی</h3>
+          <h3 class="service-title">لیزر</h3>
           <p class="service-description">
-            ارتودنسی ثابت، متحرک، دیمون و اینویزیلاین (ارتودنسی نامرئی) برای ردیف کردن دندان‌ها و اصلاح ناهنجاری‌های فکی.
+            لیزر ثابت، متحرک، دیمون و اینویزیلاین (لیزر نامرئی) برای ردیف کردن دندان‌ها و اصلاح ناهنجاری‌های فکی.
           </p>
           <div class="service-features">
-            <div class="service-feature"><i class="fas fa-check-circle"></i> ارتودنسی ثابت</div>
+            <div class="service-feature"><i class="fas fa-check-circle"></i> لیزر ثابت</div>
             <div class="service-feature"><i class="fas fa-check-circle"></i> اینویزیلاین</div>
-            <div class="service-feature"><i class="fas fa-check-circle"></i> ارتودنسی دیمون</div>
+            <div class="service-feature"><i class="fas fa-check-circle"></i> لیزر دیمون</div>
           </div>
         </div>
 
@@ -2528,85 +2528,8 @@
       </div>
     </div>
   </section>
-
-  <!-- Doctors -->
-  <section id="doctors" class="doctor">
-    <div class="container">
-      <div class="section-subtitle text-center" data-aos="fade-up">تیم پزشکی</div>
-      <h2 class="section-title" data-aos="fade-up" data-aos-delay="100">متخصصین دندانپزشکی</h2>
-      
-      <div class="doctors-slider">
-        <div class="doctors-grid">
-          <div class="doctor-card fade-in touch-feedback" data-aos="fade-up" data-aos-delay="200">
-            <div class="doctor-image-wrapper">
-              <img src="https://raw.githubusercontent.com/muctebanesiri/tvkl/refs/heads/main/assets/drtavakoli.png" 
-                   alt="دکتر رضا توکلی " class="doctor-img">
-              <div class="doctor-overlay">
-                <div class="btn">مشاهده پروفایل</div>
-              </div>
-            </div>
-            <div class="doctor-info">
-              <h3 class="doctor-name">دکتر رضا توکلی </h3>
-              <div class="doctor-specialty">متخصص بیماری‌های دهان، فک و صورت</div>
-              <p class="doctor-description">
-                با +۲۱ سال سابقه در زمینه دندانپزشکی زیبایی، ایمپلنت و لیزر. عضو انجمن دندانپزشکان ایران و دارنده بورد تخصصی بیماری های دهان، فک و صورت.
-              </p>
-              <div class="doctor-social">
-                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="social-icon"><i class="fab fa-telegram"></i></a>
-                <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="doctor-card fade-in touch-feedback" data-aos="fade-up" data-aos-delay="250">
-            <div class="doctor-image-wrapper">
-              <img src="" 
-                   alt="دکتر مریم حسینی" class="doctor-img">
-              <div class="doctor-overlay">
-                <div class="btn">مشاهده پروفایل</div>
-              </div>
-            </div>
-            <div class="doctor-info">
-              <h3 class="doctor-name">دکتر مریم حسینی</h3>
-              <div class="doctor-specialty">متخصص ارتودنسی و دندانپزشکی کودکان</div>
-              <p class="doctor-description">
-                متخصص ارتودنسی با ۱۰ سال تجربه، دارای مدرک تخصصی از دانشگاه علوم پزشکی تهران و عضو انجمن ارتودنتیست‌های ایران.
-              </p>
-              <div class="doctor-social">
-                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="social-icon"><i class="fab fa-telegram"></i></a>
-                <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="doctor-card fade-in touch-feedback" data-aos="fade-up" data-aos-delay="300">
-            <div class="doctor-image-wrapper">
-              <img src="" 
-                   alt="دکتر محسن محمدی" class="doctor-img">
-              <div class="doctor-overlay">
-                <div class="btn">مشاهده پروفایل</div>
-              </div>
-            </div>
-            <div class="doctor-info">
-              <h3 class="doctor-name">دکتر محسن محمدی</h3>
-              <div class="doctor-specialty">متخصص درمان ریشه و جراحی دهان</div>
-              <p class="doctor-description">
-                متخصص اندودنتیست با ۱۲ سال سابقه، دارای مدرک تخصصی از دانشگاه علوم پزشکی تبریز و عضو انجمن اندودنتیست‌های ایران.
-              </p>
-              <div class="doctor-social">
-                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="social-icon"><i class="fab fa-telegram"></i></a>
-                <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
+  
+  
   <!-- CTA -->
   <section class="cta">
     <div class="container">
@@ -2685,7 +2608,7 @@
         <div class="blog-card fade-in touch-feedback" data-aos="fade-up" data-aos-delay="300">
           <div class="blog-image">
             <img src="https://images.unsplash.com/photo-1588776814546-1ffcf47267a5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" 
-                 alt="ارتودنسی" class="blog-img">
+                 alt="لیزر" class="blog-img">
           </div>
           <div class="blog-content">
             <div class="blog-meta">
@@ -2693,11 +2616,11 @@
                 <i class="far fa-calendar"></i>
                 ۱۰ فروردین ۱۴۰۳
               </div>
-              <div class="blog-category">ارتودنسی</div>
+              <div class="blog-category">لیزر</div>
             </div>
-            <h3 class="blog-title">ارتودنسی نامرئی (اینویزیلاین)</h3>
+            <h3 class="blog-title">لیزر نامرئی (اینویزیلاین)</h3>
             <p class="blog-excerpt">
-              ارتودنسی نامرئی یا اینویزیلاین روشی مدرن برای مرتب کردن دندان‌ها بدون استفاده از براکت‌های فلزی است. مزایا و معایب این روش را بررسی می‌کنیم.
+              لیزر نامرئی یا اینویزیلاین روشی مدرن برای مرتب کردن دندان‌ها بدون استفاده از براکت‌های فلزی است. مزایا و معایب این روش را بررسی می‌کنیم.
             </p>
             <a href="#" class="btn touch-feedback" style="padding: 12px 30px; font-size: 0.95rem; align-self: flex-start;">
               مطالعه مقاله
@@ -2745,7 +2668,7 @@
           <ul class="footer-links">
             <li><a href="#" class="footer-link"><i class="fas fa-chevron-left"></i> دندانپزشکی زیبایی</a></li>
             <li><a href="#" class="footer-link"><i class="fas fa-chevron-left"></i> ایمپلنت دندان</a></li>
-            <li><a href="#" class="footer-link"><i class="fas fa-chevron-left"></i> ارتودنسی</a></li>
+            <li><a href="#" class="footer-link"><i class="fas fa-chevron-left"></i> لیزر</a></li>
             <li><a href="#" class="footer-link"><i class="fas fa-chevron-left"></i> درمان ریشه</a></li>
             <li><a href="#" class="footer-link"><i class="fas fa-chevron-left"></i> دندانپزشکی کودکان</a></li>
           </ul>
@@ -2818,7 +2741,7 @@
             <option value="">انتخاب نوع خدمت</option>
             <option value="beauty">دندانپزشکی زیبایی</option>
             <option value="implant">ایمپلنت</option>
-            <option value="orthodontics">ارتودنسی</option>
+            <option value="orthodontics">لیزر</option>
             <option value="root">درمان ریشه</option>
             <option value="children">دندانپزشکی کودکان</option>
             <option value="checkup">معاینه عمومی</option>
@@ -3078,7 +3001,7 @@
       const serviceNames = {
         'beauty': 'دندانپزشکی زیبایی',
         'implant': 'ایمپلنت',
-        'orthodontics': 'ارتودنسی',
+        'orthodontics': 'لیزر',
         'root': 'درمان ریشه',
         'children': 'دندانپزشکی کودکان',
         'checkup': 'معاینه عمومی'
