--- a/index.html
+++ b/index.html
@@ -2359,7 +2359,7 @@
 
       <div class="hero-image fade-in" data-aos="fade-left" data-aos-delay="400">
         <div class="doctor-image-container float-animation">
-          <img src="https://github.com/muctebanesiri/images/blob/main/drtavakoli.png?raw=true" 
+          <img src="https://raw.githubusercontent.com/muctebanesiri/tvkl/refs/heads/main/assets/drtavakoli.webp" 
                alt="دکتر رضا توکلی " class="doctor-image">
           <div class="image-badge">
             <div class="badge-icon">
