--- a/index.html
+++ b/index.html
@@ -2479,7 +2479,7 @@
   <section id="about" class="about">
     <div class="container about-container">
       <div class="about-image fade-in" data-aos="fade-right">
-        <img src="https://raw.githubusercontent.com/muctebanesiri/tvkl/refs/heads/main/assets/about.png" 
+        <img src="https://raw.githubusercontent.com/muctebanesiri/tvkl/refs/heads/main/assets/about.webp" 
              alt="مطب دندانپزشکی" class="about-img">
         <div class="experience-badge">
           <div class="experience-years">۲۰+</div>
