--- a/index.html
+++ b/index.html
@@ -2388,7 +2388,7 @@
           </div>
           <h3 class="service-title">دندانپزشکی زیبایی</h3>
           <p class="service-description">
-            لمینیت سرامیکی، کامپوزیت ونیر، بلیچینگ دندان و طراحی لبخند هالیوودی با استفاده از مواد درجه یک و تکنولوژی روز دنیا.
+            لمینیت سرامیکی، کامپوزیت ونیر، بلیچینگ دندان و قالبگیری دیجیتالی توسط اسکنر پیشرفته دندانپزشکی و طراحی و ساخت پروتز های دندانی بصورت کاملا دیجیتالی با سرعت و دقت بی نظیر
           </p>
           <div class="service-features">
             <div class="service-feature"><i class="fas fa-check-circle"></i> لمینیت سرامیکی</div>
@@ -2403,7 +2403,7 @@
           </div>
           <h3 class="service-title">لیزر</h3>
           <p class="service-description">
-            لیزر ثابت، متحرک، دیمون و اینویزیلاین (لیزر نامرئی) برای ردیف کردن دندان‌ها و اصلاح ناهنجاری‌های فکی.
+            در مطب تخصصی ما از لیزر دایود پرتوان و کم‌توان برای انجام درمان‌های جراحی، برداشت ضایعات سرطانی و پیش‌سرطانی، انجام بیوپسی و نمونه‌برداری، افزایش طول تاج جهت درمان‌های پروتزی و زیبایی، و همچنین برای درمان‌های بی‌حسی و کاهش ناراحتی‌های ناحیه فک و صورت پس از جراحی با استفاده از لیزر کم‌توان، بهره‌گیری می‌شود.
           </p>
           <div class="service-features">
             <div class="service-feature"><i class="fas fa-check-circle"></i> لیزر ثابت</div>
@@ -2463,7 +2463,7 @@
           </div>
           <h3 class="service-title">خدمات پیشگیرانه</h3>
           <p class="service-description">
-            جرم‌گیری عمقی، پالیش دندان، معاینه دوره‌ای و آموزش بهداشت دهان و دندان برای پیشگیری از بیماری‌های دهانی.
+            جرم‌گیری بالا و زیر لثه، پالیش دندان، معاینه دوره‌ای و آموزش بهداشت دهان و دندان برای پیشگیری از بیماری‌های دهانی.
           </p>
           <div class="service-features">
             <div class="service-feature"><i class="fas fa-check-circle"></i> جرم‌گیری عمقی</div>
@@ -2504,7 +2504,7 @@
             </div>
             <div class="feature-text">
               مدارک تحصیلی
-              <small>دکترای دندانپزشکی از دانشگاه تبریز</small>
+              <small>مدرک عمومی دندانپزشکی از دانشگاه علوم پزشکی تبریز</small>
             </div>
           </div>
 
@@ -2543,7 +2543,7 @@
     <div class="container">
       <h2 class="cta-title" data-aos="fade-up">برای رزرو نوبت همین حالا اقدام کنید</h2>
       <p class="cta-description" data-aos="fade-up" data-aos-delay="100">
-        مطب دکتر توکلی  از شنبه تا پنجشنبه از ساعت ۸ صبح تا ۶ عصر آماده ارائه خدمات دندانپزشکی با بهترین کیفیت به شما عزیزان می‌باشد. برای رزرو نوبت تماس بگیرید.
+        مطب دکتر توکلی  روزهای زوج از ساعت ۹ صبح تا ۳ عصر و روزهای فرد از ساعت ۱۲ تا ۶ عصر آماده ارائه خدمات دندانپزشکی با بهترین کیفیت به شما عزیزان می‌باشد. برای رزرو نوبت تماس بگیرید.
       </p>
       <div class="hero-cta" data-aos="fade-up" data-aos-delay="200">
         <button class="btn cta-btn touch-feedback" onclick="makePhoneCall('04136685937')">
