--- a/index.html
+++ b/index.html
@@ -2347,11 +2347,11 @@
             <div class="stat-label">سال تجربه</div>
           </div>
           <div class="stat-item">
-            <div class="stat-number">۵۰۰۰+</div>
+            <div class="stat-number">۳۰۰۰۰+</div>
             <div class="stat-label">بیمار راضی</div>
           </div>
           <div class="stat-item">
-            <div class="stat-number">۱۰۰%</div>
+            <div class="stat-number">۹۰%+</div>
             <div class="stat-label">رضایت بیماران</div>
           </div>
         </div>
